# firmwareUpdater

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  config.h.in  firmwareUpdater.pri  firmwareUpdater.pro  firmwareUpdaterConfig.h.in  run_cmake.sh
doc/: design.md  installation.md
ext/cmake/: common.cmake  commonQt.cmake
res/: main.qrc  main.qss
res/macos/: Icon.icns  Info.plist.in
res/macos/qmake/: Info.plist.in
res/sample/: templates.json
res/win/: resources.rc
res/win/qmake/: resources.rc
src/: main.cpp
src/core/: core.cpp  core.hpp
src/core/common/: type.hpp
src/core/controller/: controller.cpp  controller.hpp  controllerMulti.cpp  controllerMulti.hpp  controllerSingle.cpp  controllerSingle.hpp  viewInterface.hpp
src/core/model/: model.cpp  model.hpp  server.cpp  server.hpp
src/core/model/device/: discovery.cpp  discovery.hpp  uploadManager.cpp  uploadManager.hpp
src/core/model/device/private/: defaultDevices.hpp  deviceSerialization.cpp  deviceSerialization.hpp
src/core/model/private/: defaultTemplates.hpp  taskManager.cpp  taskManager.hpp  templatesSerialization.cpp  templatesSerialization.hpp
src/core/model/templateInfo/: server.cpp  server.hpp
src/core/model/templateInfo/private/: defaultTemplates.hpp  templateSerialization.cpp  templateSerialization.hpp
src/core/toolkit/: timerTask.cpp  timerTask.hpp
src/ui/toolkit/: dataDownloader.cpp  dataDownloader.hpp  qssHelper.cpp  qssHelper.hpp  stepperWidget.cpp  stepperWidget.hpp
src/ui/view/main/: mainView.cpp  mainView.hpp
src/ui/view/mainWindow/: mainWindowView.cpp  mainWindowView.hpp
src/ui/view/templateBrowser/: templateBrowserView.cpp  templateBrowserView.hpp
src/ui/view/templateInfo/: templateInfoView.cpp  templateInfoView.hpp  templateStepView.cpp  templateStepView.hpp
src/ui/view/welcome/: welcomeView.cpp  welcomeView.hpp
src/ui/view/workspace/: workspace.cpp  workspace.hpp
src/ui/view/workspace/common/: imageCacheManager.cpp  imageCacheManager.hpp  modeZone.cpp  modeZone.hpp
src/ui/view/workspace/common/templateInfo/: templateInfo.cpp  templateInfo.hpp  templateStep.cpp  templateStep.hpp
src/ui/view/workspace/modeMulti/: multiModeView.cpp  multiModeView.hpp
src/ui/view/workspace/modeMulti/projectZone/: deviceWidget.cpp  deviceWidget.hpp  projectZoneMulti.cpp  projectZoneMulti.hpp
src/ui/view/workspace/modeSingle/: modeSingleView.cpp  modeSingleView.hpp
src/ui/view/workspace/modeSingle/commander/: commander.cpp  commander.hpp
(+2 files in other folders)
